--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="Web site created using create-react-app"
     />
     <title>E-Learning Website</title>
+    <link rel=“stylesheet”
+    href=“https://use.fontawesome.com/releases/v6.3.0/css/all.css”>
     
     <script defer src="/bundle.js"></script>
   </head>
